[gd_scene load_steps=5 format=3 uid="uid://dwpsnspsxca8t"]

[ext_resource type="Script" path="res://title.gd" id="1_otl8c"]
[ext_resource type="FontFile" uid="uid://68pbj7jd4v7q" path="res://HelvetiPixel.ttf" id="2_os1f8"]
[ext_resource type="PackedScene" path="res://start-button.tscn" id="2_yksgd"]
[ext_resource type="AudioStream" uid="uid://bbrasq15y8snm" path="res://Intro.mp3" id="4_e6jbu"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_otl8c")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -11.0
offset_top = -14.0
offset_right = 1196.0
offset_bottom = 692.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
offset_left = 280.0
offset_top = 30.0
offset_right = 911.0
offset_bottom = 251.0
theme_override_fonts/font = ExtResource("2_os1f8")
theme_override_font_sizes/font_size = 246
text = "Untitled"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_e6jbu")
volume_db = 10.524
autoplay = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 483.0
offset_top = 322.0
offset_right = 523.0
offset_bottom = 522.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Button" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_yksgd")]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Options")
text = "Start"

[node name="Options" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_yksgd")]
layout_mode = 2
focus_neighbor_top = NodePath("../Button")
text = "Options"

[node name="RichTextLabel" parent="MarginContainer/VBoxContainer/Options" index="1"]
text = "Start too!"

[node name="Button2" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_yksgd")]
layout_mode = 2
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("")
text = "Quit"

[node name="Panel" type="Panel" parent="."]
offset_left = 122.0
offset_top = 96.0
offset_right = 1076.0
offset_bottom = 546.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 61.0
offset_top = 39.0
offset_right = 887.0
offset_bottom = 247.0
theme_override_constants/separation = 55

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_os1f8")
theme_override_font_sizes/font_size = 56
text = "Move: Arrows or WASD"

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_os1f8")
theme_override_font_sizes/font_size = 56
text = "Interact and next dialogue line: Z or Enter"

[node name="Label3" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_os1f8")
theme_override_font_sizes/font_size = 56
text = "Run and jump dialogue line: X or Shift"

[node name="Label4" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_os1f8")
theme_override_font_sizes/font_size = 56
text = "Fullscreen: F4"

[connection signal="button_down" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Button2" to="." method="_on_quit_button_down"]

[editable path="MarginContainer/VBoxContainer/Options"]
